[package]
name = "ark-circom-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.81"

num-traits = { version = "0.2.0", default-features = false }
num-bigint = { version = "0.4", default-features = false, features = ["rand"] }

ark-bn254 = { version = "0.3.0" }
ark-ec = { version = "0.3.0", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.3.0", default-features = false, features = ["parallel", "asm"] }
ark-groth16 = { git = "https://github.com/arkworks-rs/groth16", rev = "765817f", features = ["parallel"] }
ark-std = { version = "0.3.0", default-features = false, features = ["parallel"] }

[lib]
crate-type = ["cdylib", "rlib"]